# petanque_manager

./: .gitignore  .pre-commit-config.yaml  Acceuil.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
pages/: 1_Dashboard.py  1_Tableau de bord.py  2_Joueurs.py  2_Players.py  3_Programme.py  3_Schedule.py  3_Tirage.py  4_Results.py  4_Résultats.py  5_Classement.py  5_Ranking.py
scripts/: __init__.py  hash_password.py
src/core/: models.py  scheduler.py  stats.py
src/infra/: auth.py  storage.py  storage_json.py  storage_sqlmodel.py
src/petanque_manager/: __init__.py
src/petanque_manager/core/: __init__.py  models.py  scheduler.py  stats.py
src/petanque_manager/infra/: __init__.py  auth.py  storage.py  storage_json.py  storage_sqlmodel.py
src/utils/: seed.py  terrain_labels.py
tests/: __init__.py  conftest.py  test_constraints_tracking.py  test_match_distribution.py  test_ranking.py  test_scheduler_scoring.py
